--- a/notebooks/1_data_collection.ipynb
+++ b/notebooks/1_data_collection.ipynb
@@ -2650,6 +2650,12 @@
     "    base64_image = image_to_base64(image_path)\n",
     "    file_name = image_path.split(\"/\")[-1] \n",
     "\n",
+    "    # Xác định định dạng ảnh (jpeg/png)\n",
+    "    if file_name.lower().endswith(\".png\"):\n",
+    "        mime_type = \"image/png\"\n",
+    "    else:\n",
+    "        mime_type = \"image/jpeg\"\n",
+    "\n",
     "    prompt_text = f\"\"\"\n",
     "    Hãy tạo ra 5 mô tả ngắn gọn về bức ảnh thể thao này, mỗi mô tả có độ dài tự nhiên trong khoảng 15 từ.\n",
     "    \n",
@@ -2678,17 +2684,16 @@
     "\n",
     "    \"\"\"\n",
     "\n",
-    "\n",
     "    response = client.chat.completions.create(\n",
     "        model=\"gpt-4o-mini\",\n",
     "        messages=[\n",
-    "                    {\"role\": \"system\", \"content\": \"Bạn là một AI bình luận viên chuyên mô tả hình ảnh hoạt động thể thao.\"},\n",
-    "                    {\"role\": \"user\", \"content\": [\n",
-    "                        {\"type\": \"text\", \"text\": prompt_text},\n",
-    "                        {\"type\": \"image_url\", \"image_url\": {\"url\": f\"data:image/jpeg;base64,{base64_image}\"}}\n",
-    "                    ]}\n",
-    "                ],\n",
-    "        max_tokens=200  # Tăng max_tokens để tránh bị cắt câu trả lời\n",
+    "            {\"role\": \"system\", \"content\": \"Bạn là một AI bình luận viên chuyên mô tả hình ảnh hoạt động thể thao.\"},\n",
+    "            {\"role\": \"user\", \"content\": [\n",
+    "                {\"type\": \"text\", \"text\": prompt_text},\n",
+    "                {\"type\": \"image_url\", \"image_url\": {\"url\": f\"data:{mime_type};base64,{base64_image}\"}}\n",
+    "            ]}\n",
+    "        ],\n",
+    "        max_tokens=200\n",
     "    )\n",
     "\n",
     "    return response.choices[0].message.content\n",
