fix: delete noise captions & re-split dataset

--- a/notebooks/1_data_collection.ipynb
+++ b/notebooks/1_data_collection.ipynb
@@ -2796,7 +2796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8182,7 +8182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8198,7 +8198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -8221,7 +8221,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Đang ghi thêm caption cho ảnh đã xử lý lại...\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"../data/captions.txt\", \"a\", encoding=\"utf-8\") as f:\n",
+    "    print(\"Đang ghi thêm caption cho ảnh đã xử lý lại...\")\n",
+    "    \n",
+    "    f.write(\"\\nbadminton_7.jpg\\tKhông khí căng thẳng của môn cầu lông được khắc họa qua hành động dứt điểm mãnh liệt.  \")\n",
+    "    f.write(\"\\nbaseball_0.jpg\\tTrong không khí căng thẳng, người chơi thể hiện kỹ năng đánh bóng tuyệt vời trên sân.  \")\n",
+    "    f.write(\"\\ncycling_49.jpg\\tVới trang phục thể thao nổi bật, các tay đua thể hiện kỹ năng vượt địa hình khó khăn.\")\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8232,6 +8255,20 @@
     "\n",
     "# sort lại theo tên file\n",
     "lines.sort(key=lambda x: x.split(\"\\t\")[0])  # Sắp xếp theo tên file\n",
+    "# kiểm tra xem có file nào nhiều hơn/ ít hơn 5 caption không\n",
+    "for file_name in os.listdir(folder_path):\n",
+    "    count = sum(1 for line in lines if line.startswith(file_name))\n",
+    "    if count != 5:\n",
+    "        print(f\"File {file_name} có {count} caption\")\n",
+    "        \n",
+    "for line in lines:\n",
+    "    # kiểm tra xem có line nào không bắt đầu bằng tên file không\n",
+    "    for file_name in os.listdir(folder_path):\n",
+    "        if line.startswith(file_name):\n",
+    "            break\n",
+    "    else:\n",
+    "        print(f\"Không tìm thấy tên file trong dòng: {line.strip()}\")\n",
+    "    \n",
     "\n",
     "with open(captions_file, \"w\", encoding=\"utf-8\") as file:\n",
     "    file.writelines(lines)  # Ghi lại nội dung đã sắp xếp vào file"
@@ -8246,7 +8283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -8256,9 +8293,9 @@
       "✅ train: 1262 ảnh --> ../data/dataset\\train\\images\n",
       "✅ val: 270 ảnh --> ../data/dataset\\val\\images\n",
       "✅ test: 272 ảnh --> ../data/dataset\\test\\images\n",
-      "✅ train: 6313 caption --> ../data/dataset/train/captions.txt\n",
+      "✅ train: 6310 caption --> ../data/dataset/train/captions.txt\n",
       "✅ val: 1350 caption --> ../data/dataset/val/captions.txt\n",
-      "✅ test: 1357 caption --> ../data/dataset/test/captions.txt\n",
+      "✅ test: 1360 caption --> ../data/dataset/test/captions.txt\n",
       "\n",
       "🎉 Chia dataset xong trong thư mục: ../data/dataset\n"
      ]
@@ -8310,6 +8347,8 @@
     "    \n",
     "# Chia captions.txt thành các file riêng cho từng tập train, val, test\n",
     "df = pd.read_csv(output_file, sep=\"\\t\", header=None, names=[\"filename\", \"caption\"])\n",
+    "df[\"filename\"] = df[\"filename\"].str.strip()  # Xóa khoảng trắng đầu cuối trong tên file\n",
+    "df[\"caption\"] = df[\"caption\"].str.strip()  # Xóa khoảng trắng đầu cuối trong caption\n",
     "for split, filenames in splits.items():\n",
     "    split_df = df[df[\"filename\"].isin(filenames)]\n",
     "    split_df.to_csv(os.path.join(output_dir, split, \"captions.txt\"), sep=\"\\t\", index=False, header=False)\n",
@@ -8320,7 +8359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -8363,7 +8402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -8402,7 +8441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -8420,11 +8459,11 @@
      "output_type": "stream",
      "text": [
       "Captions:\n",
-      "Đôi giày thể thao dẫm lên bụi đất, biểu thị cho sự quyết tâm trong baseball.\n",
-      "Vận động viên đang thực hiện cú đạp mạnh vào một căn cứ, giữ vững vị trí.\n",
-      "Hình ảnh gần gũi với những giây phút quyết định trong trận đấu nảy lửa trên sân bóng.\n",
-      "Tư thế dứt khoát, bước chân chạm vào căn cứ, thể hiện sự nhanh nhẹn của cầu thủ.\n",
-      "Cảnh tượng sinh động nơi sân bóng, nơi niềm đam mê và kỹ thuật hòa quyện.\n"
+      "baseball_76.jpg\tĐôi giày thể thao dẫm lên bụi đất, biểu thị cho sự quyết tâm trong baseball.\n",
+      "baseball_76.jpg\tVận động viên đang thực hiện cú đạp mạnh vào một căn cứ, giữ vững vị trí.\n",
+      "baseball_76.jpg\tHình ảnh gần gũi với những giây phút quyết định trong trận đấu nảy lửa trên sân bóng.\n",
+      "baseball_76.jpg\tTư thế dứt khoát, bước chân chạm vào căn cứ, thể hiện sự nhanh nhẹn của cầu thủ.\n",
+      "baseball_76.jpg\tCảnh tượng sinh động nơi sân bóng, nơi niềm đam mê và kỹ thuật hòa quyện.\n"
      ]
     }
    ],
@@ -8438,7 +8477,7 @@
     "    img_name = random.sample(images, 1)[0]   \n",
     "    img_path = os.path.join(image_dir, img_name)\n",
     "    img = mpimg.imread(img_path)\n",
-    "    captions = [line.split(\"\\t\")[1] for line in lines if line.startswith(img_name)]\n",
+    "    captions = [line for line in lines if line.startswith(img_name)]\n",
     "    plt.figure(figsize=(10, 5))\n",
     "    plt.imshow(img)\n",
     "    plt.title(img_name)\n",
